Functional test for password accuracy. Added classes for vare, Handleliste and a controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.jackson.serialization.indent-output=true
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-Password = "pass"
+Password = pass
