Login working. Redirect to list in progress

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 Password = pass
+
+url.handlelisteURL = handleliste
+url.loginURL = login
+url.logoutURL = logout
+
+message.invalidPassword = incorrect password
+message.requireLogin = you are not logged in
+message.logout = you are logged out
